--- a/project.html
+++ b/project.html
@@ -18,6 +18,7 @@
             <div class="header_left">
                 <div class="title">Stimulus</div>
             </div>
+            <div></div>
             <div class="header_right">
                 <nav class="navigation">
                     <div class="nav">HOME</div>
